--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Speed Reader</title>
+    <title>Red Read</title>
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="icons/icon-192.png">
     <link rel="stylesheet" href="styles.css">
@@ -16,7 +16,7 @@
         <!-- Library View -->
         <div id="library-view" class="view active">
             <header class="library-header">
-                <h1>Speed Reader</h1>
+                <h1>Red Read</h1>
                 <p class="subtitle">RSVP Reading Engine</p>
             </header>
 
@@ -1040,7 +1040,7 @@
             this.loadSettings();
             this.loadLibrary();
 
-            console.log('Speed Reader initialized');
+            console.log('Red Read initialized');
         }
 
         initElements() {
