--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
                     </button>
                 </div>
             </div>
+            <!-- Safe-area spacer for iPhone home indicator -->
+            <div class="safe-area-spacer"></div>
         </div>
 
         <!-- Settings Panel -->
