--- a/index.html
+++ b/index.html
@@ -455,30 +455,32 @@
     const MAJOR_PUNCT = /[:;—–]+$/;
     const MINOR_PUNCT = /[,()'""\-]+$/;
 
-    function calculateORP(word) {
-        const cleanWord = word.replace(/[^a-zA-Z0-9]/g, '');
+    // Classic ORP: standard length-based table with minimum-index guardrail
+    // Guardrail: For words 7+ chars, enforce ORP >= floor((len-1) * 0.3) to prevent
+    // right-heavy display (few chars left, huge tail right).
+    // ORP computed on cleanWord which is what gets displayed.
+    function calculateORP(cleanWord) {
         const len = cleanWord.length;
-        if (len <= 1) return 0;
-        if (len <= 3) return 0;
-        if (len <= 5) return 1;
-        if (len <= 9) return 2;
-        if (len <= 13) return 3;
-        return 4;
-    }
 
-    function findORPInWord(word) {
-        const leadingMatch = word.match(/^[^a-zA-Z0-9]*/);
-        const leadingOffset = leadingMatch ? leadingMatch[0].length : 0;
-        const cleanWord = word.slice(leadingOffset).replace(/[^a-zA-Z0-9]/g, '');
-        const orpInClean = calculateORP(cleanWord);
-        let cleanIndex = 0;
-        for (let i = leadingOffset; i < word.length; i++) {
-            if (/[a-zA-Z0-9]/.test(word[i])) {
-                if (cleanIndex === orpInClean) return i;
-                cleanIndex++;
-            }
+        if (len <= 1) return 0;
+        if (len === 2) return 0;
+
+        // Standard classic ORP table
+        let orp;
+        if (len <= 3) orp = 0;
+        else if (len <= 5) orp = 1;
+        else if (len <= 9) orp = 2;
+        else if (len <= 13) orp = 3;
+        else orp = 4;
+
+        // Guardrail: for longer words, ensure ORP isn't too far left
+        if (len >= 7) {
+            const minOrp = Math.floor((len - 1) * 0.3);
+            orp = Math.max(orp, minOrp);
         }
-        return leadingOffset;
+
+        // Clamp to valid range [1, len-2]
+        return Math.max(1, Math.min(orp, len - 2));
     }
 
     function classifyPunctuation(word) {
@@ -488,30 +490,26 @@
         return 'none';
     }
 
-    // Smooth timing: metronome-like with gentle assists
-    // Long word multipliers: gentle bump only
-    function getLongWordMultiplier(wordLength) {
-        if (wordLength <= 8) return 1.00;
-        if (wordLength <= 12) return 1.05;
-        return 1.10; // cap at +10%
-    }
+    // Timing multipliers: punctuation-as-timing-only
+    // Minimal bounded multipliers, capped at 1.35 total
+    function calculateMultiplier(flags) {
+        let multiplier = 1.0;
 
-    // Calculate multiplier for a token (stored for clamping logic)
-    function calculateMultiplier(flags, wordLength) {
-        let multiplier = getLongWordMultiplier(wordLength);
-
-        // Punctuation pauses (these are "hard stops" exempt from smoothing)
+        // Punctuation pauses (timing only - not displayed)
         switch (flags.punctuation) {
-            case 'minor': multiplier *= 1.15; break;  // comma, etc
-            case 'major': multiplier *= 1.25; break;  // colon, semicolon
-            case 'terminal': multiplier *= 1.40; break; // period, !, ?
+            case 'minor': multiplier = 1.12; break;    // comma
+            case 'major': multiplier = 1.18; break;    // colon, semicolon
+            case 'terminal': multiplier = 1.25; break; // period, !, ?
         }
 
-        // Paragraph boundaries (also exempt from smoothing)
-        if (flags.isParagraphEnd) multiplier *= 1.30;
-        if (flags.isParagraphStart) multiplier *= 1.10;
+        // Paragraph end: real paragraph breaks only (not just terminal punctuation)
+        // isParagraphEnd is set based on actual newline/paragraph boundaries in tokenize()
+        if (flags.isParagraphEnd) {
+            multiplier = Math.max(multiplier, 1.35);
+        }
 
-        return multiplier;
+        // Clamp total to max 1.35
+        return Math.min(multiplier, 1.35);
     }
 
     // Check if token has a "hard stop" (exempt from duration clamping)
@@ -559,6 +557,15 @@
         return result;
     }
 
+    // Clean word for display: keep letters, numbers, and apostrophes (for contractions)
+    // Normalize curly apostrophes to straight for consistency
+    function cleanForDisplay(word) {
+        // Normalize curly apostrophes (U+2018, U+2019) and backtick to straight
+        const normalized = word.replace(/[\u2018\u2019`]/g, "'");
+        // Keep only letters, numbers, and apostrophes
+        return normalized.replace(/[^a-zA-Z0-9']/g, '');
+    }
+
     function tokenize(text, mode = 'reading') {
         const tokens = [];
         const paragraphs = text.replace(/\r\n/g, '\n').replace(/\r/g, '\n').split(/\n\s*\n/).map(p => p.trim()).filter(p => p.length > 0);
@@ -569,22 +576,27 @@
 
             for (let i = 0; i < words.length; i++) {
                 const word = words[i];
-                const cleanWord = word.replace(/[^a-zA-Z0-9]/g, '');
+                // displayWord: cleaned for display, keeps apostrophes for contractions
+                const displayWord = cleanForDisplay(word);
 
-                // Skip if still no letters after normalization
-                if (!cleanWord) continue;
+                // Skip if no letters after cleaning
+                if (!displayWord || !/[a-zA-Z]/.test(displayWord)) continue;
 
+                // Punctuation from original word drives timing only
                 const flags = {
                     isParagraphStart: i === 0,
                     isParagraphEnd: i === words.length - 1,
                     punctuation: classifyPunctuation(word),
-                    wordLength: cleanWord.length
+                    wordLength: displayWord.length
                 };
 
+                // ORP computed on displayWord (what is shown)
+                const orpIndex = calculateORP(displayWord);
+
                 tokens.push({
-                    word,
-                    orpIndex: findORPInWord(word),
-                    multiplier: calculateMultiplier(flags, cleanWord.length),
+                    word: displayWord,
+                    orpIndex,
+                    multiplier: calculateMultiplier(flags),
                     flags
                 });
             }
@@ -1822,24 +1834,27 @@
                     throw new Error('Document data not found or empty. Please re-import.');
                 }
 
-                // Migrate old token format (baseDurationMs) to new format (multiplier)
-                if (tokens[0].baseDurationMs !== undefined && tokens[0].multiplier === undefined) {
-                    console.log('[Migration] Upgrading old token format to new format');
+                // Migrate old token format to new clean format (keeps apostrophes for contractions)
+                const needsMigration = tokens[0].baseDurationMs !== undefined ||
+                                       /[^a-zA-Z0-9']/.test(tokens[0].word);
+                if (needsMigration) {
+                    console.log('[Migration] Upgrading tokens to clean word format');
                     tokens = tokens.map(token => {
-                        const cleanWord = token.word.replace(/[^a-zA-Z0-9]/g, '');
-                        const flags = token.flags || {
-                            isParagraphStart: false,
-                            isParagraphEnd: false,
-                            punctuation: classifyPunctuation(token.word),
-                            wordLength: cleanWord.length
+                        const originalWord = token.word;
+                        const displayWord = cleanForDisplay(originalWord);
+                        const flags = {
+                            isParagraphStart: token.flags?.isParagraphStart || false,
+                            isParagraphEnd: token.flags?.isParagraphEnd || false,
+                            punctuation: classifyPunctuation(originalWord),
+                            wordLength: displayWord.length
                         };
                         return {
-                            word: token.word,
-                            orpIndex: token.orpIndex,
-                            multiplier: calculateMultiplier(flags, cleanWord.length),
+                            word: displayWord,
+                            orpIndex: calculateORP(displayWord),
+                            multiplier: calculateMultiplier(flags),
                             flags
                         };
-                    });
+                    }).filter(t => t.word && /[a-zA-Z]/.test(t.word));
                     // Save migrated tokens
                     await this.persistence.saveTokens(docId, tokens);
                     console.log('[Migration] Tokens migrated and saved');
