--- a/index.html
+++ b/index.html
@@ -1595,6 +1595,8 @@
 
                 // Strip Jina metadata header (lines starting with Title:, URL:, etc.)
                 text = this.cleanProxyOutput(text);
+                // Normalize Wikipedia/nav boilerplate
+                text = this.normalizeProxyText(text, url);
 
                 if (!text.trim()) {
                     throw new Error('No readable text found');
@@ -1673,6 +1675,73 @@
                 .trim();
 
             return content;
+        }
+
+        // Normalize proxy text: filter Wikipedia/nav boilerplate, keep article prose
+        normalizeProxyText(text, sourceUrl) {
+            const lines = text.split('\n');
+            const kept = [];
+
+            // Boilerplate patterns to drop (case-insensitive)
+            const boilerplatePatterns = [
+                /^languages?$/i, /^english$/i, /^español$/i, /^français$/i, /^deutsch$/i,
+                /^العربية$/i, /^中文$/i, /^日本語$/i, /^русский$/i, /^português$/i,
+                /^jump to (navigation|search|content)/i, /^contents$/i, /^from wikipedia/i,
+                /^wikipedia$/i, /^main page$/i, /^current events$/i, /^random article$/i,
+                /^donate$/i, /^help$/i, /^about wikipedia$/i, /^contact us$/i,
+                /^tools$/i, /^print\/export$/i, /^in other projects$/i,
+                /^create account$/i, /^log in$/i, /^talk$/i, /^contributions$/i,
+                /^what links here$/i, /^related changes$/i, /^upload file$/i,
+                /^special pages$/i, /^permanent link$/i, /^page information$/i,
+                /^cite this page$/i, /^wikidata item$/i, /^download as pdf$/i,
+                /^\[edit\]$/i, /^edit$/i, /^hide$/i, /^show$/i,
+                /^\d+ languages?$/i, /^read$/i, /^view (history|source)$/i
+            ];
+
+            // Stop headings (end of main content)
+            const stopHeadings = [
+                /^#{1,3}\s*references/i, /^#{1,3}\s*external links/i,
+                /^#{1,3}\s*see also/i, /^#{1,3}\s*further reading/i,
+                /^#{1,3}\s*notes$/i, /^#{1,3}\s*citations$/i,
+                /^references$/i, /^external links$/i, /^see also$/i, /^further reading$/i
+            ];
+
+            for (const line of lines) {
+                const trimmed = line.trim();
+
+                // Skip empty lines (will rejoin with double newlines)
+                if (!trimmed) continue;
+
+                // Stop at reference/external links sections
+                if (stopHeadings.some(p => p.test(trimmed))) break;
+
+                // Skip boilerplate
+                if (boilerplatePatterns.some(p => p.test(trimmed))) continue;
+
+                // Skip short navigation-like lines (< 30 chars, no sentence punctuation)
+                if (trimmed.length < 30 && !/[.?!]/.test(trimmed)) continue;
+
+                // Skip markdown image/link-only lines
+                if (/^!\[.*\]\(.*\)$/.test(trimmed)) continue;
+                if (/^\[.*\]\(.*\)$/.test(trimmed) && trimmed.length < 80) continue;
+
+                // Keep paragraph-like lines: >= 80 chars with punctuation OR >= 12 words
+                const wordCount = trimmed.split(/\s+/).length;
+                const hasSentencePunct = /[.?!]/.test(trimmed);
+                const isHeading = /^#{1,6}\s/.test(trimmed);
+
+                if (isHeading || (trimmed.length >= 80 && hasSentencePunct) || wordCount >= 12) {
+                    kept.push(trimmed);
+                }
+            }
+
+            // Join kept lines, strip citation brackets [1] [2] etc.
+            let result = kept.join('\n\n');
+            result = result.replace(/\s*\[\d+\]/g, '');
+            result = result.replace(/\s*\[citation needed\]/gi, '');
+            result = result.replace(/\s*\[edit\]/gi, '');
+
+            return result.trim();
         }
 
         extractTitle(text, url) {
