--- a/index.html
+++ b/index.html
@@ -1683,8 +1683,10 @@
             text = text.replace(/https?:\/\/[^\s\]\)]+/gi, '');
             text = text.replace(/www\.[^\s\]\)]+/gi, '');
             text = text.replace(/[a-z]{2,3}\.wikipedia\.org\/wiki\/[^\s\]\)]+/gi, '');
-            // Strip markdown link syntax leaving just the text: [text](url) -> text
-            text = text.replace(/\[([^\]]*)\]\([^)]*\)/g, '$1');
+            // Strip markdown link syntax leaving just the text: [text](url) -> text + space
+            text = text.replace(/\[([^\]]*)\]\([^)]*\)/g, '$1 ');
+            // Collapse multiple spaces after link conversion
+            text = text.replace(/  +/g, ' ');
 
             const lines = text.split('\n');
             const kept = [];
